# misc

./: README.md
experiment/15bit_16bit/: Makefile  README.md  base.h  fft.cc  fft.h  main.cc
experiment/60bit_64bit/: Makefile  README.md  complex.h  data.txt  fft.cc  fft.h  main.cc  script.plt  sorted_output.txt
experiment/fft_types/: .gitignore  Makefile  README.md  complex.h  cooley.h  cooley_dif1.h  cooley_dift.h  cooley_dit1.h  cooley_ditf.h  ddit.h  dif.h  dit.h  dit3.h  dpmp.h  fft.h  fmt.cc  fmt.h  integer.cc  integer.h  main.cc  pmp.h  pmp2.h  pmp5.h  stockham6.h  stockham_dif.h  stockham_dit.h  vpmp.h
experiment/ntt_types/: .gitignore  Makefile  base.h  complex.h  fft.h  main.cc  mod.h  mod_base.h  mod_specific.h  montgomery.h  ntt.h  pnt.h  prime_search.py  ref.h  ref_no_table.h  refr2.h
qiita/gmppi/: .gitignore  Makefile  chudnovsky.cc  computer.cc  computer.h  itchyny.c  peria.cc  ramanujan.cc
rust/: .gitignore
twitter/UECda/src/server/: Makefile.in  README.txt  config.log.f  configure  configure.ac
twitter/UECda/src/server/autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
twitter/UECda/src/server/src/: .gitignore  Imakefile  Makefile.am  Makefile.in  card_newn.xpm  config.h.in  daihu.c  daihu.c.bak  daihu.c.swm  daihu.c.swn  daihu.c.swo  daihu.c.swp  define.h  external.c  external.h  test.sh  tn_protocol.c  tn_protocol.h  tndhms.cfg  xdaihu.c  xdaihu.c.bak  xdaihu.c.swo  xdaihu.c.swp  xdaihu.h  xdaihu.h.bak
twitter/UECda/src/server/src/rand/: Makefile  main.c  test.c  test.h
(+77 files in other folders)
